# gen-ui-workflow

./: .gitignore  Justfile  README.md
backend/: .env.example  main.py  pyproject.toml
backend/graph/: components.py  nodes.py  state.py  workflow.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.jsx
frontend/src/pages/: GraphDebug.jsx
