[project]
name = "backend"
version = "1.0.0"
description = "Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    "langgraph>=0.2.55",
    "langchain-core>=1.3.3",
    "langchain-openai>=1.1.14",
    "sse-starlette>=2.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["graph"]
